gateway-api/examples/gke/http-to-https-redirect/04-gateway-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: route-external-http
spec:
  parentRefs:
  - kind: Gateway
    name: mygateway1-regional
    sectionName: https  # listener name
  rules:
  - backendRefs:
    - name: myapp1-service
      port: 80
      weight: 100
