gateway-api/examples/gke/http-to-https-redirect/05-gateway-http-to-https-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: redirect
spec:
  parentRefs:
  - name: mygateway1-regional
    sectionName: http  # listener name
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
